removed Caliburn, added BaseViewModel

--- a/WpfTask/Views/EditView.xaml
+++ b/WpfTask/Views/EditView.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfTask.Views" xmlns:viewmodels="clr-namespace:WpfTask.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:EditViewModel}"
         mc:Ignorable="d"
-        Title="EditView" Height="400" Width="300" FontSize="20">
+        Background="White"
+        Height="400" Width="300" FontSize="20">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
